--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </div>
                     <div class="col-6">
                         <div class="pb-2"><strong>Space requirement for Dwelling, Cars, RV, Etc.</strong></div>
-                        <input type="text" class="form-control" name="space-requirement" id="space-requirement" aria-label="Recipient's username" placeholder="ex. 1 car 1 Truck 1 trailer 24ft Kodiak Tent 10by14ft " aria-describedby="basic-addon2">
+                        <input type="text" class="form-control" name="space" id="space" aria-label="Recipient's username" placeholder="ex. 1 car 1 Truck 1 trailer 24ft Kodiak Tent 10by14ft " aria-describedby="basic-addon2">
                     </div>
                 </div>
             </div>
@@ -184,8 +184,8 @@
 
                     </div>
                     <div class="col-3 pt-2">
-                        <label for="Camp Mandatory Donation" name="donation" class="form-label" ><strong>Camp Manditory Donation Per/Human</strong></label>
-                                        <select name="arrival-strike" id="donation" class="form-select">
+                        <label for="Camp Mandatory Donation" name="arrivalDonation" class="form-label" ><strong>Camp Manditory Donation Per/Human</strong></label>
+                                        <select name="arrival-strike" id="arrivalDonation" class="form-select">
                                             <option selected>Pick a Option</option>
                                             <option value="value1">Early Arrival, Build, Strike 350$</option>
                                             <option value="value2">Early Arrival, Build, NO STRIKE 450$</option>
@@ -195,7 +195,7 @@
                     </div>
                     <div class="col-3">
                         <div class="pb-2 pt-2"><strong>Early Arrival? Yes/No + How Many </strong></div>
-                        <input type="text" name="early-arrival" id="early-arrival class="form-control" placeholder="Yes 3 Friday Aug 23rd or No"  aria-label="Recipient's username" aria-describedby="basic-addon2">
+                        <input type="text" name="early" id="early" class="form-control" placeholder="Yes 3 Friday Aug 23rd or No"  aria-label="Recipient's username" aria-describedby="basic-addon2">
                     </div>
                 </div>
             </div>
